Replace ModuleReaderProxy with direct use of ModuleReader
ModuleReaderProxy existed to wrap java.lang.module.ModuleReader, which was
not available on JDK 8. ModuleRef#open() now returns a ModuleReader, and the
proxy's Optional/Stream unwrapping and null-tolerant list() (see #887) have
moved to the package-private nonapi ModuleReaderUtils, so the exported
io.github.classgraph package no longer carries the extra class. (#860)

Also start CHANGES.md, which records the user-visible v4 -> v5 changes.